@@ -38,11 +38,11 @@ namespace KXMLCore {
       int resultLength;
       destIfNeeded = 0;
 
-      resultLength = u_strToLower(0, 0, str, strLength, "", &err);
+      resultLength = u_strToLower(0, 0, static_cast< ::UChar*>(str), strLength, "", &err);
 
       if (resultLength <= strLength) {
         err = U_ZERO_ERROR;
-        u_strToLower(str, resultLength, str, strLength, "", &err);
+        u_strToLower(static_cast< ::UChar*>(str), resultLength, static_cast< ::UChar*>(str), strLength, "", &err);
       } else {
         err = U_ZERO_ERROR;
         destIfNeeded = (uint16_t*)malloc(resultLength * sizeof(uint16_t));
@@ -58,11 +58,11 @@ namespace KXMLCore {
       int resultLength;
       destIfNeeded = 0;
 
-      resultLength = u_strToUpper(0, 0, str, strLength, "", &err);
+      resultLength = u_strToUpper(0, 0, static_cast< ::UChar*>(str), strLength, "", &err);
 
       if (resultLength <= strLength) {
         err = U_ZERO_ERROR;
-        u_strToUpper(str, resultLength, str, strLength, "", &err);
+        u_strToUpper(static_cast< ::UChar*>(str), resultLength, static_cast< ::UChar*>(str), strLength, "", &err);
       } else {
         err = U_ZERO_ERROR;
         destIfNeeded = (uint16_t*)malloc(resultLength * sizeof(uint16_t));
